[package]
name = "nfs-util"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
prolink-nfs = { path = "../prolink-nfs" }
structopt = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
