[package]
name = "prolink-nfs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
bytes = "1.1.0"
pretty-hex = "0.2.1"
tokio = { version = "1.12.0", features = ["full"] }
xdr-codec = { git="https://github.com/konkers/rust-xdr" }

[build-dependencies]
xdrgen = {path = "../../rust-xdr/xdrgen"}
