[package]
name = "prolink-util"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
http-types = "2.12.0"
mac_address = "1.1.2"
pnet = "0.28.0"
prolink = {path = "../prolink"}
serde = { version = "1.0", features = ["derive"] }
tide = "0.16.0"
tokio = { version = "1.12.0", features = ["full"] }