[package]
name = "prolink-util"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
http-types = "2.12.0"
prolink = {path = "../prolink"}
serde = { version = "1.0", features = ["derive"] }
tide = "0.16.0"
tokio = { version = "1.12.0", features = ["full"] }