[package]
name = "prolink"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
nom = "7.0.0"
pnet = "0.28.0"
tokio = { version = "1.12.0", features = ["full"] }